@@ -1,3 +1,7 @@
+1998-04-18  Stephan Kulow  <coolo@kde.org>
+
+	* acinclude.m4.in: hopefully fixed the PAM test (I rewrote it)
+
 1998-04-16  Stephan Kulow  <coolo@kde.org>
 
 	* acinclude.m4.in: extended the getsockname test inspired 
